# System-Tray-Icons

./: Cargo.toml  README.md  close.bat  start.bat
src/: main.rs
