[package]
name = "tray_guardian"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tray_guardian"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[dependencies]

[dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Controls",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_System_Power",
  "Win32_System_Registry",
  "Win32_System_Com",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Graphics_GdiPlus",
]
